change to flash 3

--- a/backend/env.example
+++ b/backend/env.example
@@ -11,7 +11,7 @@ CORS_ORIGINS=["http://localhost:3000","https://openbrowser.me","https://www.open
 # Agent settings
 DEFAULT_MAX_STEPS=50
 DEFAULT_AGENT_TYPE=code
-DEFAULT_LLM_MODEL=gemini-2.5-flash
+DEFAULT_LLM_MODEL=gemini-3-flash-preview
 MAX_CONCURRENT_AGENTS=10
 
 # Redis (optional, for session persistence)
