--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@ resume_*.txt
 # Old/duplicate PDFs
 CSC490/A1/a1.pdf
 CSC490/A1/high_level_architecture.pdf
+
+!docker-compose.dev.yml
+!docker-compose.yml
