--- a/.gitignore
+++ b/.gitignore
@@ -3,20 +3,23 @@ __pycache__/
 __pycache__
 *.py[cod]
 *.pyc
-*.md
 !README.md
 *.png
-*.csv
-*.json
 test_*
 .env
-*.yml
 !.github/workflows/*.yml
 .DS_Store
 .vscode
 node_modules
 *.pptx
-*.js
+presentation
+CSC490
+STAD68
+STAD80
+litellm
+.cursor
+.github/copilot-instructions.md
+local_docs
 
 # LaTeX build artifacts
 *.aux
