--- a/backend/env.example
+++ b/backend/env.example
@@ -22,3 +22,4 @@ MAX_CONCURRENT_AGENTS=10
 # OPENAI_API_KEY=your_openai_key
 # ANTHROPIC_API_KEY=your_anthropic_key
 # GOOGLE_API_KEY=your_google_key
+# GEMINI_API_KEY=your_gemini_key  # Alternative to GOOGLE_API_KEY
