--- a/infra/training/anyscale/finetuning_sft_job.yaml
+++ b/infra/training/anyscale/finetuning_sft_job.yaml
@@ -4,12 +4,8 @@ image_uri: anyscale/ray:2.44.1-slim-py312-cu128
 compute_config:
   cloud: anyscale-prod
   head_node:
-    instance_type: m5.2xlarge
-  worker_nodes:
-    - instance_type: g5.xlarge
-      min_nodes: 1
-      max_nodes: 1
-      market_type: SPOT
+    instance_type: g5.xlarge
+  worker_nodes: []
 working_dir: .
 excludes:
   - .git
@@ -19,19 +15,26 @@ excludes:
   - frontend
   - .cursor
   - presentation
+  - data/
+  - results/
+  - outputs/
+  - openbrowser_agent_data/
+  - "*.pyc"
 requirements:
   - torch>=2.0
-  - transformers>=4.40
-  - peft>=0.10
+  - transformers>=4.45
+  - peft>=0.12
   - datasets>=2.18
   - accelerate>=0.28
-  - bitsandbytes
+  - bitsandbytes>=0.43
+  - boto3
 env_vars:
-  GOOGLE_API_KEY: ""
-  OPENAI_API_KEY: ""
-  ANTHROPIC_API_KEY: ""
+  S3_CHECKPOINT_BUCKET: "openbrowser-eval-results"
+  S3_CHECKPOINT_PREFIX: "training/checkpoints"
+  AWS_REGION: "ca-central-1"
 max_retries: 1
 timeout_s: 14400
 tags:
   project: openbrowser
   task: sft
+  model: qwen3-8b
