--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "bubus>=1.5.6",
     "litellm==1.80.0",
     "pillow>=11.0.0",
+    "pyotp",
     "rich>=13.0.0",
     "click>=8.1.8",
     "psutil>=7.2.0",
