--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "numpy>=2.4.0",
     "openai>=1.99.5,<2.0.0",
     "pandas>=2.2.0",
+    "boto3>=1.36.0",
 ]
 
 [project.optional-dependencies]
