Update Anyscale cloud name and refine excludes in job YAMLs
Change cloud config from 'anyscale-prod' to 'Anyscale Cloud' across
all existing job definitions. Replace broad 'data/' exclude with
granular excludes (data/mind2web/, data/webarena/, data/formfactory/)
to allow processed training data to be uploaded with jobs.

--- a/infra/training/anyscale/finetuning_grpo_job.yaml
+++ b/infra/training/anyscale/finetuning_grpo_job.yaml
@@ -2,7 +2,7 @@ name: openbrowser-finetuning-grpo
 entrypoint: python -m infra.training.finetuning.grpo_trainer
 image_uri: anyscale/ray:2.44.1-slim-py312-cu128
 compute_config:
-  cloud: anyscale-prod
+  cloud: "Anyscale Cloud"
   head_node:
     instance_type: g5.xlarge
   worker_nodes: []
@@ -15,7 +15,9 @@ excludes:
   - frontend
   - .cursor
   - presentation
-  - data/
+  - data/mind2web/
+  - data/webarena/
+  - data/formfactory/
   - results/
   - outputs/
   - openbrowser_agent_data/
