--- a/infra/training/anyscale/online_grpo_job.yaml
+++ b/infra/training/anyscale/online_grpo_job.yaml
@@ -25,7 +25,7 @@ env_vars:
   TRAIN_FILE: "data/processed/formfactory_sft.jsonl"
   MAX_TRAIN_SAMPLES: "2"
   SFT_CHECKPOINT_PATH: ""
-  S3_CHECKPOINT_BUCKET: ""
+  S3_CHECKPOINT_BUCKET: "openbrowser-eval-results-529206289231"
   S3_CHECKPOINT_PREFIX: "training/checkpoints"
   AWS_REGION: "ca-central-1"
   # HF_TOKEN injected from .env at submission time by submit_job.py
