--- a/.gitignore
+++ b/.gitignore
@@ -48,4 +48,4 @@ CSC490/A1/a1.pdf
 CSC490/A1/high_level_architecture.pdf
 
 !docker-compose.dev.yml
-!docker-compose.yml
+!docker-compose.ymldata/formfactory/
