--- a/infra/training/anyscale/online_grpo_job.yaml
+++ b/infra/training/anyscale/online_grpo_job.yaml
@@ -23,11 +23,9 @@ excludes:
   - "*.pyc"
 env_vars:
   TRAIN_FILE: "data/processed/formfactory_sft.jsonl"
-  MAX_TRAIN_SAMPLES: "2"
-  SFT_CHECKPOINT_PATH: ""
-  S3_CHECKPOINT_BUCKET: "openbrowser-eval-results-529206289231"
-  S3_CHECKPOINT_PREFIX: "training/checkpoints"
-  AWS_REGION: "ca-central-1"
+  MAX_TRAIN_SAMPLES: "25"
+  NUM_EPOCHS: "1"
+  SFT_CHECKPOINT_PATH: "/mnt/user_storage/openbrowser/checkpoints/sft"
   # HF_TOKEN injected from .env at submission time by submit_job.py
 max_retries: 1
 timeout_s: 14400
