--- a/infra/training/anyscale/finetuning_sft_job.yaml
+++ b/infra/training/anyscale/finetuning_sft_job.yaml
@@ -29,11 +29,11 @@ requirements:
   - datasets>=2.18
   - accelerate>=0.28
   - bitsandbytes>=0.43
-  - boto3
 env_vars:
-  S3_CHECKPOINT_BUCKET: "openbrowser-eval-results"
-  S3_CHECKPOINT_PREFIX: "training/checkpoints"
-  AWS_REGION: "ca-central-1"
+  TRAIN_FILE: "data/processed/formfactory_sft.jsonl"
+  MAX_TRAIN_SAMPLES: "200"
+  NUM_EPOCHS: "1"
+  # HF_TOKEN injected from .env at submission time by submit_job.py
 max_retries: 1
 timeout_s: 14400
 tags:
