--- a/infra/training/anyscale/flow_matching_job.yaml
+++ b/infra/training/anyscale/flow_matching_job.yaml
@@ -1,15 +1,11 @@
-name: openbrowser-flow-matching
+name: openbrowser-flow-sft
 entrypoint: python -m infra.training.flow_matching.flow_sft_trainer
 image_uri: anyscale/ray:2.44.1-slim-py312-cu128
 compute_config:
   cloud: "Anyscale Cloud"
   head_node:
-    instance_type: m5.2xlarge
-  worker_nodes:
-    - instance_type: g5.xlarge
-      min_nodes: 1
-      max_nodes: 1
-      market_type: SPOT
+    instance_type: g5.xlarge
+  worker_nodes: []
 working_dir: .
 excludes:
   - .git
@@ -19,17 +15,24 @@ excludes:
   - frontend
   - .cursor
   - presentation
+  - data/mind2web/
+  - data/webarena/
+  - data/formfactory/
+  - results/
+  - outputs/
+  - openbrowser_agent_data/
+  - "*.pyc"
 requirements:
   - torch>=2.0
   - transformers>=4.40
-  - datasets>=2.18
-  - accelerate>=0.28
 env_vars:
-  GOOGLE_API_KEY: ""
-  OPENAI_API_KEY: ""
-  ANTHROPIC_API_KEY: ""
+  FLOW_TRAIN_FILE: "data/processed/formfactory_flow.jsonl"
+  MAX_TRAIN_SAMPLES: "200"
+  NUM_EPOCHS: "5"
+  # HF_TOKEN injected from .env at submission time by submit_job.py
 max_retries: 1
 timeout_s: 14400
 tags:
   project: openbrowser
-  task: flow-matching
+  task: flow-sft
+  model: flow-byte-25m
