--- a/infra/training/anyscale/online_flow_llm_grpo_job.yaml
+++ b/infra/training/anyscale/online_flow_llm_grpo_job.yaml
@@ -1,10 +1,10 @@
-name: openbrowser-online-grpo
-entrypoint: python -m infra.training.finetuning.online_grpo_trainer
+name: openbrowser-online-flow-llm-grpo
+entrypoint: python -m infra.training.flow_matching.online_flow_llm_grpo_trainer
 containerfile: infra/training/anyscale/Containerfile.online-grpo
 compute_config:
   cloud: "Anyscale Cloud"
   head_node:
-    instance_type: g5.xlarge
+    instance_type: g6e.xlarge
   worker_nodes: []
 working_dir: .
 excludes:
@@ -24,14 +24,14 @@ excludes:
   - data/formfactory/img/
   - "*.pyc"
 env_vars:
-  TRAIN_FILE: "data/processed/formfactory_sft.jsonl"
+  FLOW_TRAIN_FILE: "data/processed/formfactory_sft.jsonl"
   MAX_TRAIN_SAMPLES: "25"
   NUM_EPOCHS: "1"
-  SFT_CHECKPOINT_PATH: "/mnt/user_storage/openbrowser/checkpoints/sft"
+  FLOW_LLM_SFT_CHECKPOINT: ""
   # HF_TOKEN injected from .env at submission time by submit_job.py
 max_retries: 1
 timeout_s: 14400
 tags:
   project: openbrowser
-  task: online-grpo
-  model: qwen3-8b
+  task: online-flow-llm-grpo
+  model: llada-8b-mdm
