--- a/infra/Makefile
+++ b/infra/Makefile
@@ -2,7 +2,8 @@
        eval-aws-launch eval-aws-results \
        download-datasets upload-datasets download-results report \
        train-submit-sft train-submit-grpo train-submit-flow \
-       train-submit-online-flow-grpo train-submit-online-grpo train-list-jobs \
+       train-submit-online-flow-grpo train-submit-online-flow-llm-grpo \
+       train-submit-online-grpo train-list-jobs \
        preprocess-mind2web preprocess-formfactory \
        serve-vllm serve-ollama export-gguf \
        docker-build-eval docker-run-eval \
@@ -38,8 +39,9 @@ help:
 	@echo "  train-submit-sft              Submit finetuning SFT job (Qwen3-8B QLoRA)"
 	@echo "  train-submit-grpo             Submit finetuning GRPO job"
 	@echo "  train-submit-flow             Submit flow matching job"
-	@echo "  train-submit-online-flow-grpo Submit online flow GRPO job (browser execution)"
-	@echo "  train-submit-online-grpo      Submit online AR GRPO job (browser execution)"
+	@echo "  train-submit-online-flow-grpo     Submit online flow GRPO job (30M model, browser)"
+	@echo "  train-submit-online-flow-llm-grpo Submit online flow LLM GRPO job (8B model, browser)"
+	@echo "  train-submit-online-grpo          Submit online AR GRPO job (browser execution)"
 	@echo "  train-list-jobs               List available training jobs"
 	@echo ""
 	@echo "Serving:"
@@ -137,6 +139,9 @@ data/processed/formfactory_flow.jsonl:
 
 train-submit-online-flow-grpo: data/processed/formfactory_flow.jsonl
 	$(SUBMIT_CMD) online-flow-grpo
+
+train-submit-online-flow-llm-grpo: data/processed/formfactory_sft.jsonl
+	$(SUBMIT_CMD) online-flow-llm-grpo
 
 train-submit-online-grpo: data/processed/formfactory_sft.jsonl
 	$(SUBMIT_CMD) online-grpo
