--- a/infra/training/anyscale/eval_refusion_sft_job.yaml
+++ b/infra/training/anyscale/eval_refusion_sft_job.yaml
@@ -1,5 +1,5 @@
-name: openbrowser-online-flow-llm-grpo
-entrypoint: python -m infra.training.flow_matching.online_flow_llm_grpo_trainer
+name: openbrowser-eval-refusion-sft
+entrypoint: python -m infra.training.flow_matching.eval_refusion_sft
 containerfile: infra/training/anyscale/Containerfile.online-grpo
 compute_config:
   cloud: "Anyscale Cloud"
@@ -25,13 +25,12 @@ excludes:
   - "*.pyc"
 env_vars:
   FLOW_TRAIN_FILE: "data/processed/formfactory_sft.jsonl"
-  MAX_TRAIN_SAMPLES: "25"
-  NUM_EPOCHS: "1"
+  MAX_EVAL_SAMPLES: "25"
   FLOW_LLM_SFT_CHECKPOINT: "/mnt/user_storage/openbrowser/checkpoints/flow-llm-sft/adapter"
   # HF_TOKEN injected from .env at submission time by submit_job.py
 max_retries: 1
-timeout_s: 14400
+timeout_s: 7200
 tags:
   project: openbrowser
-  task: online-flow-llm-grpo
+  task: eval-refusion-sft
   model: refusion-8b-mdm
