--- a/infra/training/anyscale/fsdfm_sft_job.yaml
+++ b/infra/training/anyscale/fsdfm_sft_job.yaml
@@ -1,10 +1,10 @@
-name: openbrowser-online-flow-llm-grpo
-entrypoint: python -m infra.training.flow_matching.online_flow_llm_grpo_trainer
-containerfile: infra/training/anyscale/Containerfile.online-grpo
+name: openbrowser-fsdfm-sft
+entrypoint: python -m infra.training.flow_matching.fsdfm_sft_trainer
+containerfile: infra/training/anyscale/Containerfile.online-fsdfm-grpo
 compute_config:
   cloud: "Anyscale Cloud"
   head_node:
-    instance_type: g6e.xlarge
+    instance_type: g5.xlarge
   worker_nodes: []
 working_dir: .
 excludes:
@@ -25,13 +25,12 @@ excludes:
   - "*.pyc"
 env_vars:
   FLOW_TRAIN_FILE: "data/processed/formfactory_sft.jsonl"
-  MAX_TRAIN_SAMPLES: "25"
-  NUM_EPOCHS: "1"
-  FLOW_LLM_SFT_CHECKPOINT: "/mnt/user_storage/openbrowser/checkpoints/flow-llm-sft/adapter"
+  MAX_TRAIN_SAMPLES: "500"
+  NUM_EPOCHS: "5"
   # HF_TOKEN injected from .env at submission time by submit_job.py
 max_retries: 1
 timeout_s: 14400
 tags:
   project: openbrowser
-  task: online-flow-llm-grpo
-  model: refusion-8b-mdm
+  task: fsdfm-sft
+  model: fsdfm-1.3b-dfm
