Added mcp>=1.0.0 to pyproject.toml in three places:
  - mcp extra -- standalone optional dependency for MCP functionality
  - dev extra -- so CI test environments (pip install -e ".[dev]") get it
  - all extra -- full install includes it

  The root cause: openbrowser.mcp.__init__.py eagerly imports MCPClient from client.py, which does from
  mcp import ClientSession, StdioServerParameters, types at module level (line 41). The test imports
  openbrowser.mcp, triggering this chain, but mcp was never declared as a dependency.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,12 +41,14 @@ groq = ["groq>=0.30.0"]
 ollama = ["ollama>=0.5.1"]
 aws = ["boto3"]
 azure = ["openai"]
+mcp = ["mcp>=1.0.0"]
 telemetry = ["posthog>=3.7.0"]
 pdf = ["pypdf", "reportlab"]
 dev = [
     "pytest>=9.0.2",
     "pytest-asyncio>=1.0.0",
     "pytest-cov>=6.0.0",
+    "mcp>=1.0.0",
 ]
 all = [
     "textual>=3.2.0",
@@ -59,6 +61,7 @@ all = [
     "posthog>=3.7.0",
     "pypdf",
     "reportlab",
+    "mcp>=1.0.0",
 ]
 
 [project.scripts]
