fix(training): un-gitignore processed JSONL for Anyscale job packaging
Ray working_dir packaging respects .gitignore, causing
data/processed/*.jsonl to be silently excluded from uploads.
Change pattern from ignoring the directory to ignoring contents,
with a negation for .jsonl files.

--- a/.gitignore
+++ b/.gitignore
@@ -58,7 +58,8 @@ data/formfactory/
 # Runtime data
 openbrowser_agent_data/
 backend/openbrowser_agent_data/
-data/processed/
+data/processed/*
+!data/processed/*.jsonl
 results/
 feature-store-ui/
 
