--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,8 @@ dependencies = [
     "openai>=1.99.5,<2.0.0",
     "pandas>=2.2.0",
     "boto3>=1.36.0",
+    "posthog>=3.7.0",
+    "reportlab",
 ]
 
 [project.optional-dependencies]
