fix(infra): download FormFactory at runtime in online training jobs
Change entrypoint in 6 online training YAML configs to clone
FormFactory before starting the trainer. Fixes runtime failure where
data/formfactory/ was missing because .gitignore prevents Ray upload.

--- a/infra/training/anyscale/refusion_flow_grpo_job.yaml
+++ b/infra/training/anyscale/refusion_flow_grpo_job.yaml
@@ -1,5 +1,5 @@
 name: openbrowser-refusion-flow-grpo
-entrypoint: python -m infra.training.flow_matching.refusion_flow_grpo_trainer
+entrypoint: bash -c "python -m infra.eval.scripts.download_datasets --datasets formfactory && python -m infra.training.flow_matching.refusion_flow_grpo_trainer"
 containerfile: infra/training/anyscale/Containerfile.online-grpo
 compute_config:
   cloud: "Anyscale Cloud"
