--- a/infra/training/anyscale/online_fsdfm_grpo_job.yaml
+++ b/infra/training/anyscale/online_fsdfm_grpo_job.yaml
@@ -1,5 +1,5 @@
 name: openbrowser-online-fsdfm-grpo
-entrypoint: python -m infra.training.flow_matching.fsdfm_online_grpo_trainer
+entrypoint: bash -c "python -m infra.eval.scripts.download_datasets --datasets formfactory && python -m infra.training.flow_matching.fsdfm_online_grpo_trainer"
 containerfile: infra/training/anyscale/Containerfile.online-fsdfm-grpo
 compute_config:
   cloud: "Anyscale Cloud"
