fix(infra): download FormFactory at runtime in eval jobs
Change entrypoint in 8 eval YAML configs to clone FormFactory before
starting the evaluator. Same .gitignore fix as online training jobs.

--- a/infra/training/anyscale/eval_fsdfm_flow_grpo_job.yaml
+++ b/infra/training/anyscale/eval_fsdfm_flow_grpo_job.yaml
@@ -1,5 +1,5 @@
 name: openbrowser-eval-fsdfm-flow-grpo
-entrypoint: python -m infra.training.flow_matching.eval_fsdfm_sft
+entrypoint: bash -c "python -m infra.eval.scripts.download_datasets --datasets formfactory && python -m infra.training.flow_matching.eval_fsdfm_sft"
 containerfile: infra/training/anyscale/Containerfile.online-fsdfm-grpo
 compute_config:
   cloud: "Anyscale Cloud"
