--- a/infra/training/anyscale/eval_refusion_flow_grpo_job.yaml
+++ b/infra/training/anyscale/eval_refusion_flow_grpo_job.yaml
@@ -1,5 +1,5 @@
 name: openbrowser-eval-refusion-flow-grpo
-entrypoint: python -m infra.training.flow_matching.eval_refusion_sft
+entrypoint: bash -c "python -m infra.eval.scripts.download_datasets --datasets formfactory && python -m infra.training.flow_matching.eval_refusion_sft"
 containerfile: infra/training/anyscale/Containerfile.online-grpo
 compute_config:
   cloud: "Anyscale Cloud"
