--- a/src/openbrowser/mcp/manifest.json
+++ b/src/openbrowser/mcp/manifest.json
@@ -53,7 +53,7 @@
     },
     {
       "name": "browser_get_state",
-      "description": "Get the current page state including all interactive elements with their indices. Essential for interaction"
+      "description": "Get page state summary (URL, title, element count). Use compact=false for full element list"
     },
     {
       "name": "browser_extract_content",
@@ -78,6 +78,22 @@
     {
       "name": "browser_close_tab",
       "description": "Close a specific tab by its index"
+    },
+    {
+      "name": "browser_get_text",
+      "description": "Get page content as clean markdown text. Efficient alternative to screenshots for reading content"
+    },
+    {
+      "name": "browser_grep",
+      "description": "Search page text with regex or string pattern. Returns matching lines with context like grep"
+    },
+    {
+      "name": "browser_search_elements",
+      "description": "Search interactive DOM elements by text, tag, id, class, or attribute. Returns indices for click/type"
+    },
+    {
+      "name": "browser_find_and_scroll",
+      "description": "Find text on the page and scroll to it for navigation"
     }
   ],
   "prompts": [
