feat(mcp): add browser_get_accessibility_tree and browser_execute_js tools
Add two advanced inspection tools to the MCP server:

- browser_get_accessibility_tree: returns the page accessibility tree with
  roles, names, descriptions, and properties as structured JSON. Supports
  max_depth limiting and include_ignored filtering. Uses DomService to
  collect AX trees across all frames.

- browser_execute_js: evaluates JavaScript expressions in the page context
  via CDP Runtime.evaluate with awaitPromise support. Returns typed results
  (number, string, object, boolean, undefined) or structured error details
  for exceptions.

Both tools require an active browser session and valid page target.

--- a/src/openbrowser/mcp/manifest.json
+++ b/src/openbrowser/mcp/manifest.json
@@ -94,6 +94,14 @@
     {
       "name": "browser_find_and_scroll",
       "description": "Find text on the page and scroll to it for navigation"
+    },
+    {
+      "name": "browser_get_accessibility_tree",
+      "description": "Get the page accessibility tree with roles, names, and properties for structure analysis and a11y testing"
+    },
+    {
+      "name": "browser_execute_js",
+      "description": "Execute JavaScript in the page context and return the result. Use for advanced interactions and data extraction"
     }
   ],
   "prompts": [
