test(mcp): add integration tests for MCP tools with real browser session
Add test_mcp_integration.py with 18 integration tests that spin up a real
headless Chrome session against a local HTML fixture:

- TestIntegrationGetText: title extraction, paragraph content, link URLs
- TestIntegrationGrep: text search, table data, no matches
- TestIntegrationSearchElements: by tag, id, class, text content
- TestIntegrationGetState: compact and full state with element details
- TestIntegrationExecuteJs: expressions, document.title, DOM queries,
  table data extraction via IIFE
- TestIntegrationAccessibilityTree: tree structure and node count

Tests are marked with @pytest.mark.integration and skipped by default.
Run with: pytest -m integration

Register integration marker in pyproject.toml to avoid warnings.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,4 +93,5 @@ asyncio_default_fixture_loop_scope = "function"
 asyncio_default_test_loop_scope = "function"
 markers = [
     "asyncio: mark tests as async tests",
+    "integration: integration tests requiring a real browser",
 ]
