--- a/backend/env.example
+++ b/backend/env.example
@@ -23,3 +23,12 @@ MAX_CONCURRENT_AGENTS=10
 # ANTHROPIC_API_KEY=your_anthropic_key
 # GOOGLE_API_KEY=your_google_key
 # GEMINI_API_KEY=your_gemini_key  # Alternative to GOOGLE_API_KEY
+
+# Cognito Authentication (optional)
+# Set AUTH_ENABLED=true to require JWT auth for REST + WebSocket.
+AUTH_ENABLED=false
+# COGNITO_REGION=ca-central-1
+# COGNITO_USER_POOL_ID=ca-central-1_xxxxxxxx
+# COGNITO_APP_CLIENT_ID=xxxxxxxxxxxxxxxxxxxxxxxxxx
+# Optional explicit issuer override:
+# COGNITO_ISSUER=https://cognito-idp.ca-central-1.amazonaws.com/ca-central-1_xxxxxxxx
