--- a/src/openbrowser/mcp/manifest.json
+++ b/src/openbrowser/mcp/manifest.json
@@ -26,11 +26,8 @@
       "command": "uvx",
       "args": ["openbrowser", "--mcp"],
       "env": {
-        "OPENAI_API_KEY": "${user_config.openai_api_key}",
-        "ANTHROPIC_API_KEY": "${user_config.anthropic_api_key}",
         "OPENBROWSER_HEADLESS": "${user_config.headless}",
-        "OPENBROWSER_ALLOWED_DOMAINS": "${user_config.allowed_domains}",
-        "OPENBROWSER_LLM_MODEL": "${user_config.llm_model}"
+        "OPENBROWSER_ALLOWED_DOMAINS": "${user_config.allowed_domains}"
       }
     }
   },
@@ -144,44 +141,6 @@
       "default": "${HOME}/.config/openbrowser/profiles/default",
       "required": false
     },
-    "openai_api_key": {
-      "type": "string",
-      "title": "OpenAI API Key",
-      "description": "API key for OpenAI models (used by browser agent for content extraction). Get one at https://platform.openai.com",
-      "default": "",
-      "required": false,
-      "sensitive": true
-    },
-    "anthropic_api_key": {
-      "type": "string",
-      "title": "Anthropic API Key",
-      "description": "API key for Anthropic Claude models (alternative to OpenAI). Get one at https://console.anthropic.com",
-      "default": "",
-      "required": false,
-      "sensitive": true
-    },
-    "llm_model": {
-      "type": "string",
-      "title": "LLM Model",
-      "description": "Which AI model to use for browser agent tasks",
-      "enum": ["gpt-4o", "gpt-4o-mini", "claude-3-opus-20240229", "claude-3-sonnet-20240229"],
-      "default": "gpt-4o-mini",
-      "required": false
-    },
-    "llm_endpoint": {
-      "type": "string",
-      "title": "LLM API Endpoint",
-      "description": "Custom API endpoint for LLM (e.g., for Azure OpenAI or self-hosted models)",
-      "default": "",
-      "required": false
-    },
-    "use_vision": {
-      "type": "boolean",
-      "title": "Use Vision",
-      "description": "Enable vision capabilities for the agent to understand page content via screenshots",
-      "default": true,
-      "required": false
-    },
     "disable_security": {
       "type": "boolean",
       "title": "Disable Security",
@@ -245,13 +204,13 @@
       "maximum": 10,
       "required": false
     },
-    "max_steps": {
+    "session_timeout": {
       "type": "number",
-      "title": "Max Agent Steps",
-      "description": "Maximum number of steps the agent can take in a single task",
-      "default": 100,
+      "title": "Session Timeout (minutes)",
+      "description": "Minutes of inactivity before browser session auto-closes",
+      "default": 10,
       "minimum": 1,
-      "maximum": 1000,
+      "maximum": 60,
       "required": false
     }
   },
