--- a/frontend/env.local.example
+++ b/frontend/env.local.example
@@ -12,6 +12,6 @@ NEXT_PUBLIC_WS_URL=ws://localhost:8000/ws
 NEXT_PUBLIC_AUTH_ENABLED=false
 # NEXT_PUBLIC_COGNITO_DOMAIN=https://your-domain.auth.us-east-1.amazoncognito.com
 # NEXT_PUBLIC_COGNITO_CLIENT_ID=your_app_client_id
-# NEXT_PUBLIC_COGNITO_REDIRECT_URI=http://localhost:3000/auth/callback/
-# NEXT_PUBLIC_COGNITO_LOGOUT_URI=http://localhost:3000/login/
+# NEXT_PUBLIC_COGNITO_REDIRECT_URI=http://localhost:3000/auth/callback
+# NEXT_PUBLIC_COGNITO_LOGOUT_URI=http://localhost:3000/login
 # NEXT_PUBLIC_COGNITO_SCOPES=openid email profile
