feat(mcp): add return_by_value parameter to browser_execute_js
Add optional return_by_value boolean parameter (default True) to the
browser_execute_js MCP tool. When False, CDP Runtime.evaluate returns a
RemoteObject reference (objectId, type, subtype, className, description)
instead of a serialized value, enabling DOM element queries that cannot
be serialized to JSON.

--- a/src/openbrowser/mcp/manifest.json
+++ b/src/openbrowser/mcp/manifest.json
@@ -90,7 +90,7 @@
     },
     {
       "name": "browser_execute_js",
-      "description": "Execute JavaScript in the page context and return the result. Set await_promise=false for fire-and-forget scripts"
+      "description": "Execute JavaScript in the page context and return the result. Set await_promise=false for fire-and-forget scripts. Set return_by_value=false to get RemoteObject references for DOM elements"
     }
   ],
   "prompts": [
