feat(training): update 8 eval YAML files to use val split
Replace FLOW_TRAIN_FILE/TRAIN_FILE with FLOW_VAL_FILE/VAL_FILE in
all eval job configs. Eval now runs on the validation split
(formfactory_sft_val.jsonl) instead of training data.

--- a/infra/training/anyscale/eval_grpo_job.yaml
+++ b/infra/training/anyscale/eval_grpo_job.yaml
@@ -24,7 +24,7 @@ excludes:
   - data/formfactory/img/
   - "*.pyc"
 env_vars:
-  TRAIN_FILE: "data/processed/formfactory_sft.jsonl"
+  VAL_FILE: "data/processed/formfactory_sft_val.jsonl"
   MAX_EVAL_SAMPLES: "25"
   SFT_CHECKPOINT_PATH: "/mnt/user_storage/openbrowser/checkpoints/online-grpo"
   EVAL_LABEL: "GRPO"
