--- a/infra/training/anyscale/eval_fsdfm_flow_grpo_job.yaml
+++ b/infra/training/anyscale/eval_fsdfm_flow_grpo_job.yaml
@@ -24,7 +24,7 @@ excludes:
   - data/formfactory/img/
   - "*.pyc"
 env_vars:
-  FLOW_TRAIN_FILE: "data/processed/formfactory_sft.jsonl"
+  FLOW_VAL_FILE: "data/processed/formfactory_sft_val.jsonl"
   MAX_EVAL_SAMPLES: "25"
   # Point to Flow-GRPO checkpoint -- same eval script, different weights
   FSDFM_SFT_CHECKPOINT: "/mnt/user_storage/openbrowser/checkpoints/fsdfm-flow-grpo/final"
