--- a/infra/training/anyscale/eval_sft_job.yaml
+++ b/infra/training/anyscale/eval_sft_job.yaml
@@ -24,7 +24,7 @@ excludes:
   - data/formfactory/img/
   - "*.pyc"
 env_vars:
-  TRAIN_FILE: "data/processed/formfactory_sft.jsonl"
+  VAL_FILE: "data/processed/formfactory_sft_val.jsonl"
   MAX_EVAL_SAMPLES: "25"
   SFT_CHECKPOINT_PATH: "/mnt/user_storage/openbrowser/checkpoints/sft"
   # HF_TOKEN injected from .env at submission time by submit_job.py
