--- a/infra/training/anyscale/finetuning_sft_job.yaml
+++ b/infra/training/anyscale/finetuning_sft_job.yaml
@@ -33,6 +33,8 @@ env_vars:
   TRAIN_FILE: "data/processed/formfactory_sft_train.jsonl"
   MAX_TRAIN_SAMPLES: "992"
   NUM_EPOCHS: "1"
+  LEARNING_RATE: "5e-5"
+  MAX_STEPS: "30"
   # HF_TOKEN injected from .env at submission time by submit_job.py
 max_retries: 1
 timeout_s: 14400
