--- a/backend/env.example
+++ b/backend/env.example
@@ -17,6 +17,10 @@ MAX_CONCURRENT_AGENTS=10
 # Redis (optional, for session persistence)
 # REDIS_URL=redis://localhost:6379
 
+# PostgreSQL (required for chat persistence)
+# DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/openbrowser
+# DATABASE_ECHO=false
+
 # LLM API Keys (set these for the agents to work)
 # BROWSER_USE_API_KEY=your_browser_use_key
 # OPENAI_API_KEY=your_openai_key
