infra: add RDS PostgreSQL for chat persistence
- RDS instance (db.t4g.micro, PostgreSQL 16.4) in private subnets
- Security group: allow port 5432 from backend EC2 only
- Auto-generate password with random_password resource
- Inject DATABASE_URL into backend EC2 env file
- Terraform variables for db name, username, instance class, storage, backup
- Outputs: postgres_endpoint, postgres_port, postgres_db_name

--- a/infra/production/terraform/terraform.tfvars.example
+++ b/infra/production/terraform/terraform.tfvars.example
@@ -16,6 +16,14 @@ backend_port          = 8000
 backend_image     = ""
 backend_image_tag = "latest"
 
+# PostgreSQL (RDS)
+postgres_db_name              = "openbrowser"
+postgres_username             = "openbrowser"
+postgres_instance_class       = "db.t4g.micro"
+postgres_allocated_storage    = 20
+postgres_backup_retention_days = 7
+postgres_skip_final_snapshot  = true
+
 # CORS origins: additional origins beyond the auto-derived CloudFront domain.
 # The CloudFront domain and localhost:3000 are always included automatically.
 # Add any extra origins here (e.g., staging domains, custom domains).
