fix(eval): replace unused VAL_FILE with EVAL_SPLIT in GRPO eval config
The eval script reads EVAL_SPLIT (defaults to "val"), not VAL_FILE.
Replace the dead env var for consistency with the test eval configs.

--- a/infra/training/anyscale/eval_grpo_job.yaml
+++ b/infra/training/anyscale/eval_grpo_job.yaml
@@ -24,7 +24,7 @@ excludes:
   - data/formfactory/img/
   - "*.pyc"
 env_vars:
-  VAL_FILE: "data/processed/formfactory_sft_val.jsonl"
+  EVAL_SPLIT: "val"
   MAX_EVAL_SAMPLES: "124"
   SFT_CHECKPOINT_PATH: "/mnt/user_storage/openbrowser/checkpoints/online-grpo"
   EVAL_LABEL: "GRPO"
