fix(manifest): correct package name to openbrowser-ai[mcp]
The mcp_config args said "openbrowser" but the correct PyPI package
name is "openbrowser-ai[mcp]".

--- a/src/openbrowser/mcp/manifest.json
+++ b/src/openbrowser/mcp/manifest.json
@@ -24,7 +24,7 @@
     "entry_point": "python",
     "mcp_config": {
       "command": "uvx",
-      "args": ["openbrowser", "--mcp"],
+      "args": ["openbrowser-ai[mcp]", "--mcp"],
       "env": {
         "OPENBROWSER_HEADLESS": "${user_config.headless}",
         "OPENBROWSER_ALLOWED_DOMAINS": "${user_config.allowed_domains}"
