chore: allow benchmark chart and docs images in git
Add .gitignore exceptions for benchmarks/benchmark_comparison.png and
docs/images/*.png so chart assets can be tracked.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ __pycache__
 *.pyc
 !README.md
 *.png
+!benchmarks/benchmark_comparison.png
+!docs/images/*.png
 .env
 !.github/workflows/*.yml
 .DS_Store
