chore(infra): add tfplan, numbered backups, and lambda zips to .gitignore

--- a/infra/production/terraform/.gitignore
+++ b/infra/production/terraform/.gitignore
@@ -3,6 +3,11 @@
 .terraform.lock.hcl
 terraform.tfstate
 terraform.tfstate.backup
+terraform.tfstate.*.backup
 *.tfvars
 !terraform.tfvars.example
 .terraform.tfvars.local
+
+# Build artifacts
+tfplan
+lambda/*.zip
