chore(gitignore): exclude benchmark plot scripts from version control
Plot scripts (plot_benchmark.py, plot_all_benchmarks.py) generate
the benchmark PNG images but should not be tracked in git history.
The generated images are tracked; the scripts remain local-only.

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,7 @@ feature-store-ui/
 
 # Drawio diagrams
 *.drawio
+
+# Benchmark plot scripts (generated images are tracked, scripts are local-only)
+benchmarks/plot_benchmark.py
+benchmarks/plot_all_benchmarks.py
