security(compose): load POSTGRES_PASSWORD from environment variable
Replace hardcoded postgres password with ${POSTGRES_PASSWORD}
variable substitution in both docker-compose files. The actual
value is set in the root .env file (gitignored).

--- a/backend/env.example
+++ b/backend/env.example
@@ -18,7 +18,8 @@ MAX_CONCURRENT_AGENTS=10
 # REDIS_URL=redis://localhost:6379
 
 # PostgreSQL (required for chat persistence)
-# DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/openbrowser
+# POSTGRES_PASSWORD=your_postgres_password
+# DATABASE_URL=postgresql+asyncpg://postgres:${POSTGRES_PASSWORD}@localhost:5432/openbrowser
 # DATABASE_ECHO=false
 
 # LLM API Keys (set these for the agents to work)
